tests/baselines/reference/objectLiteralsAgainstUnionsOfArrays01.errors.txt
tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts(10,12): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts (1 errors) ====
    interface Foo {
      bar: Bar | Bar[];
    }
    
    interface Bar {
      prop: string;
    }
    
    let x: Foo[] = [
      { bar: { prop: 100 } }
               ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    ]
    